Process Hacker

2.24
 * NEW/IMPROVED:
   * Completely new system information window
   * Added option to hide driver services
   * Improved module scanning
   * Added Image base to peview
   * Updated ExtendedTools plugin:
     * Added support for new system information window
     * Added Disk, Network and GPU tray icons
 * FIXED:
   * Fixed retrieval of version information for certain files

2.23
 * NEW/IMPROVED:
   * Added display of token capabilities, user/device claims
     and security attributes
   * Added ability to change token integrity levels
   * Added Description column to service list
   * Added option to reset all settings
   * Made grid color darker
   * Enabled multi-selection in the hidden processes window
   * Added UserNotes plugin
   * Updated ExtendedNotifications plugin:
     * Added Growl support
   * Updated ExtendedTools plugin:
     * Added GPU monitoring
     * Added rate columns for disk and network I/O
 * FIXED:
   * Fixed copying lists when plugin columns are enabled
   * Freezing when viewing the tooltip for a process with a
     very long command line
   * Disabled Hidden Processes feature on 64-bit systems

2.22
 * NEW/IMPROVED:
   * Added highlighting for metro style apps
   * Added Package Name column
   * Added package name to process tooltip
   * Improved .NET process detection
   * Updated OS Context column for Windows 8
   * Updated ExtendedTools plugin:
     * Updated disk monitoring for Windows 8
     * Updated memory list information for Windows 8
   * Updated WindowExplorer plugin:
     * Fixed hook support for low integrity processes
 * FIXED:
   * Fixed memory leaks
   * Fixed bug preventing Interrupts/DPCs from being shown
     as the max. CPU process on 64-bit systems
   * Fixed DEP Status column on 64-bit systems

2.21
 * NEW/IMPROVED:
   * Added Private Bytes Delta, ASLR and Subsystem columns
   * Added ASLR and Time Stamp columns to modules list
   * Added check for debugger in Terminator
 * FIXED: